--- a/.babelrc
+++ b/.babelrc
@@ -15,7 +15,7 @@
   "env": {
     "production": {
       "presets": ["react-optimize"],
-      "plugins": ["transform-runtime", "ramda"]
+      "plugins": ["transform-runtime", "ramda", "lodash"]
     }
   }
 }
