--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "ramda": "^0.24.1",
@@ -47,6 +48,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-ramda": "^1.4.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -75,6 +77,7 @@
     "git-repo-name": "^0.6.0",
     "html-webpack-plugin": "^2.30.1",
     "ignore-styles": "^5.0.1",
+    "lodash-webpack-plugin": "^0.11.4",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
     "postcss": "^6.0.12",
