--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "bluebird": "^3.5.0",
     "chalk": "^2.1.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
