--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
+    "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
@@ -54,18 +54,18 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "bluebird": "^3.5.0",
+    "bluebird": "^3.5.1",
     "chalk": "^2.1.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "enzyme": "^3.0.0",
+    "enzyme": "^3.1.0",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.1",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^1.1.5",
     "gh-pages": "^1.0.0",
@@ -75,21 +75,21 @@
     "lodash-webpack-plugin": "^0.11.4",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
-    "postcss": "^6.0.12",
-    "postcss-loader": "^2.0.6",
+    "postcss": "^6.0.13",
+    "postcss-loader": "^2.0.7",
     "react-addons-test-utils": "^15.6.2",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "react-hot-loader": "^3.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
     "style-loader": "^0.19.0",
-    "stylelint": "^8.1.1",
+    "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-scss": "^2.1.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.8.0",
     "tape-catch": "^1.0.6",
-    "webpack": "^3.6.0",
+    "webpack": "^3.7.1",
     "webpack-dev-server": "^2.9.1"
   }
 }
