--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-axios-middleware": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
