--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-spec",
     "start": "cross-env NODE_ENV=development node scripts/start",
-    "build": "cross-env NODE_ENV=production webpack --progress --colors",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack --progress --colors",
     "deploy": "cross-env NODE_ENV=production BUILD=pages node scripts/deploy",
     "clean": "rimraf public",
     "clean:git": "node scripts/clean-git",
