--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ramda": "^0.25.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
