--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@storybook/react": "^3.2.18",
-    "autoprefixer": "^7.2.3",
+    "@storybook/react": "^3.3.9",
+    "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-ramda": "^1.4.3",
@@ -62,12 +62,12 @@
     "babel-runtime": "^6.26.0",
     "bluebird": "^3.5.1",
     "chalk": "^2.3.0",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
-    "enzyme": "^3.2.0",
-    "eslint": "^4.13.1",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.8",
+    "enzyme": "^3.3.0",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-import-resolver-webpack": "^0.8.4",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
@@ -81,10 +81,10 @@
     "lodash-webpack-plugin": "^0.11.4",
     "node-sass": "^4.7.2",
     "open-browser-webpack-plugin": "^0.0.5",
-    "postcss": "^6.0.14",
-    "postcss-loader": "^2.0.9",
+    "postcss": "^6.0.16",
+    "postcss-loader": "^2.0.10",
     "react-addons-test-utils": "^15.6.2",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.0.0-beta.14",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
@@ -96,7 +96,7 @@
     "tape": "^4.8.0",
     "tape-catch": "^1.0.6",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
+    "webpack-dev-server": "^2.11.0",
     "yesno": "0.0.1"
   }
 }
