--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,19 @@
 {
-  "presets": ["react", ["es2015", { "loose" : true, "modules": false }], "stage-0"],
-  "plugins": ["transform-decorators-legacy"],
+  "presets": [
+    "react",
+    "stage-0",
+    [
+      "babel-preset-env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions"]
+        },
+        "modules": false
+      }
+    ]
+  ],
+
+  "plugins": ["transform-decorators-legacy", "transform-class-properties"],
 
   "env": {
     "production": {
