--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     "react",
     "stage-1",
     [
-      "babel-preset-env",
+      "env",
       {
         "targets": {
           "browsers": ["last 2 versions"]
