--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.8",
     "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-import-resolver-webpack": "^0.8.4",
