--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/rtivital/react-pages-boilerplate#readme",
   "dependencies": {
+    "@storybook/addon-centered": "^3.3.9",
     "@storybook/react": "^3.3.9",
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
@@ -38,8 +39,8 @@
     "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-icons": "^2.2.7",
     "react-hot-loader": "^4.0.0-beta.14",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
