--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-prop-types": "0.0.3",
     "redux": "^3.7.2",
     "redux-axios-middleware": "^4.0.0",
     "redux-thunk": "^2.2.0"
