--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "stylelint": "^8.4.0",
+    "stylelint-config-css-modules": "^1.1.0",
     "stylelint-config-standard": "^18.0.0",
     "stylelint-scss": "^2.3.0",
     "webpack": "^3.11.0",
