--- a/package.json
+++ b/package.json
@@ -28,41 +28,41 @@
   },
   "homepage": "https://github.com/rtivital/react-pages-boilerplate#readme",
   "dependencies": {
-    "@storybook/addon-centered": "^3.3.13",
-    "@storybook/react": "^3.3.13",
-    "axios": "^0.17.1",
+    "@storybook/addon-centered": "^3.4.3",
+    "@storybook/react": "^3.4.3",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.1",
-    "lodash": "^4.17.5",
+    "enzyme-to-json": "^3.3.3",
+    "lodash": "^4.17.10",
     "normalize.css": "^8.0.0",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0-beta.14",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.1.2",
     "react-icons": "^2.2.7",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-router-prop-types": "0.0.3",
-    "redux": "^3.7.2",
+    "react-router-prop-types": "1.0.3",
+    "redux": "^4.0.0",
     "redux-axios-middleware": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "storybook-router": "^0.3.2",
-    "webpack-bundle-analyzer": "^2.10.0"
+    "storybook-router": "^0.3.4",
+    "webpack-bundle-analyzer": "^2.11.1"
   },
   "devDependencies": {
-    "autoprefixer": "^8.0.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.2.2",
-    "babel-loader": "^7.1.2",
+    "autoprefixer": "^8.4.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-lodash": "^3.3.2",
-    "babel-plugin-module-resolver": "^3.0.0",
-    "babel-plugin-ramda": "^1.4.3",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-ramda": "^1.6.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -73,40 +73,40 @@
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bluebird": "^3.5.1",
-    "chalk": "^2.3.1",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.17.0",
+    "chalk": "^2.4.1",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-import-resolver-webpack": "^0.8.4",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jest": "^21.12.1",
+    "eslint-import-resolver-webpack": "^0.9.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^1.1.6",
+    "favicons-webpack-plugin": "0.0.9",
+    "file-loader": "^1.1.11",
     "gh-pages": "^1.1.0",
     "git-repo-name": "^0.6.0",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "ignore-styles": "^5.0.1",
-    "jest": "^22.2.2",
-    "lodash-webpack-plugin": "^0.11.4",
-    "node-sass": "^4.7.2",
+    "jest": "^22.4.3",
+    "lodash-webpack-plugin": "^0.11.5",
+    "node-sass": "^4.9.0",
     "open-browser-webpack-plugin": "^0.0.5",
-    "postcss": "^6.0.17",
-    "postcss-loader": "^2.1.0",
-    "prettier": "^1.10.2",
+    "postcss": "^6.0.22",
+    "postcss-loader": "^2.1.5",
+    "prettier": "^1.12.1",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "stylelint": "^8.4.0",
-    "stylelint-config-css-modules": "^1.1.0",
-    "stylelint-config-standard": "^18.0.0",
-    "stylelint-scss": "^2.3.0",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "stylelint": "^9.2.0",
+    "stylelint-config-css-modules": "^1.2.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-scss": "^3.1.0",
+    "webpack": "^4.7.0",
+    "webpack-dev-server": "^3.1.4",
     "yesno": "0.0.1"
   }
 }
