--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bluebird": "^3.5.1",
+    "browser-sync": "^2.24.4",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "chalk": "^2.4.1",
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.4",
