--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^1.1.11",
     "gh-pages": "^1.1.0",
@@ -109,6 +109,7 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-scss": "^3.1.0",
     "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "yesno": "0.0.1"
   }
