--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
   "dependencies": {
     "@storybook/addon-actions": "^3.4.10",
     "@storybook/addon-centered": "^3.4.10",
+    "@storybook/addons": "^3.4.10",
     "@storybook/react": "^4.0.0-alpha.4",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
     "lodash": "^4.17.10",
     "normalize.css": "^8.0.0",
@@ -44,7 +45,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
-    "react-icons": "^3.0.4",
+    "react-icons": "^3.0.5",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -80,11 +81,11 @@
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "eslint": "^5.2.0",
+    "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jest": "^21.18.0",
+    "eslint-plugin-jest": "^21.20.2",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -97,19 +98,19 @@
     "ignore-styles": "^5.0.1",
     "jest": "^23.4.2",
     "lodash-webpack-plugin": "^0.11.5",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.9.3",
     "open-browser-webpack-plugin": "^0.0.5",
     "postcss": "^7.0.2",
-    "postcss-loader": "^2.1.6",
-    "prettier": "^1.14.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.21.0",
+    "style-loader": "^0.22.1",
     "stylelint": "^9.4.0",
     "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-scss": "^3.2.0",
-    "webpack": "^4.16.4",
+    "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "yesno": "0.0.1"
