--- a/package.json
+++ b/package.json
@@ -28,43 +28,43 @@
   },
   "homepage": "https://github.com/rtivital/react-pages-boilerplate#readme",
   "dependencies": {
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-centered": "^3.4.10",
-    "@storybook/addons": "^3.4.10",
-    "@storybook/react": "^4.0.0-alpha.4",
-    "axios": "^0.18.0",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-centered": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/react": "^5.1.11",
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
-    "enzyme": "^3.4.4",
-    "enzyme-adapter-react-16": "^1.2.0",
-    "enzyme-to-json": "^3.3.4",
-    "lodash": "^4.17.10",
-    "normalize.css": "^8.0.0",
-    "prop-types": "^15.6.2",
-    "ramda": "^0.25.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-hot-loader": "^4.3.4",
-    "react-icons": "^3.0.5",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-router-prop-types": "1.0.4",
-    "redux": "^4.0.0",
-    "redux-axios-middleware": "^4.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
+    "lodash": "^4.17.15",
+    "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
+    "ramda": "^0.26.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.11",
+    "react-icons": "^3.7.0",
+    "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-router-prop-types": "^1.0.4",
+    "redux": "^4.0.4",
+    "redux-axios-middleware": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "storybook-router": "^0.3.4",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack-bundle-analyzer": "^3.4.1"
   },
   "devDependencies": {
-    "autoprefixer": "^9.1.1",
+    "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^23.4.2",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-ramda": "^1.6.2",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-ramda": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -74,45 +74,48 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "bluebird": "^3.5.1",
-    "browser-sync": "^2.24.6",
+    "bluebird": "^3.5.5",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
-    "chalk": "^2.4.1",
-    "clean-webpack-plugin": "^0.1.19",
+    "chalk": "^2.4.2",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.21.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-flowtype": "^4.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.15.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "favicons-webpack-plugin": "0.0.9",
-    "file-loader": "^1.1.11",
-    "gh-pages": "^1.2.0",
-    "git-repo-name": "^0.6.0",
+    "favicons-webpack-plugin": "^1.0.1",
+    "file-loader": "^4.2.0",
+    "gh-pages": "^2.1.1",
+    "git-repo-name": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "ignore-styles": "^5.0.1",
-    "jest": "^23.5.0",
+    "jest": "^24.9.0",
     "lodash-webpack-plugin": "^0.11.5",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.12.0",
     "open-browser-webpack-plugin": "^0.0.5",
-    "postcss": "^7.0.2",
+    "postcss": "^7.0.17",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.14.2",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "stylelint": "^9.4.0",
-    "stylelint-config-css-modules": "^1.3.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-scss": "^3.3.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "yesno": "0.0.1"
+    "prettier": "^1.18.2",
+    "rimraf": "^3.0.0",
+    "sass-loader": "^7.2.0",
+    "style-loader": "^1.0.0",
+    "stylelint": "^10.1.0",
+    "stylelint-config-css-modules": "^1.4.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-scss": "^3.9.3",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "3.2.1",
+    "yesno": "^0.3.0"
   }
 }
