--- a/package.json
+++ b/package.json
@@ -28,91 +28,46 @@
   },
   "homepage": "https://github.com/rtivital/react-pages-boilerplate#readme",
   "dependencies": {
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-centered": "^3.4.10",
-    "@storybook/addons": "^3.4.10",
-    "@storybook/react": "^4.0.0-alpha.4",
-    "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
-    "enzyme": "^3.4.4",
-    "enzyme-adapter-react-16": "^1.2.0",
-    "enzyme-to-json": "^3.3.4",
-    "lodash": "^4.17.10",
-    "normalize.css": "^8.0.0",
-    "prop-types": "^15.6.2",
-    "ramda": "^0.25.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-hot-loader": "^4.3.4",
-    "react-icons": "^3.0.5",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-router-prop-types": "1.0.4",
-    "redux": "^4.0.0",
-    "redux-axios-middleware": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "storybook-router": "^0.3.4",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "enzyme-adapter-react-16": "^1.15.4",
+    "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.21",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "webpack-bundle-analyzer": "^3.8.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.1.1",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^23.4.2",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-ramda": "^1.6.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "bluebird": "^3.5.1",
-    "browser-sync": "^2.24.6",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "chalk": "^2.4.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.21.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "favicons-webpack-plugin": "0.0.9",
-    "file-loader": "^1.1.11",
-    "gh-pages": "^1.2.0",
-    "git-repo-name": "^0.6.0",
-    "html-webpack-plugin": "^3.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.5.0",
+    "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
+    "babel-loader": "^8.1.0",
+    "chalk": "^4.1.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^4.3.0",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "favicons-webpack-plugin": "4.2.0",
+    "file-loader": "^6.1.0",
+    "gh-pages": "^3.1.0",
+    "git-repo-name": "^1.0.1",
+    "html-webpack-plugin": "^4.4.1",
     "identity-obj-proxy": "^3.0.0",
-    "ignore-styles": "^5.0.1",
-    "jest": "^23.5.0",
-    "lodash-webpack-plugin": "^0.11.5",
-    "node-sass": "^4.9.3",
+    "jest": "^26.4.2",
     "open-browser-webpack-plugin": "^0.0.5",
-    "postcss": "^7.0.2",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^1.14.2",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "stylelint": "^9.4.0",
-    "stylelint-config-css-modules": "^1.3.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-scss": "^3.3.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "yesno": "0.0.1"
+    "postcss": "^7.0.32",
+    "postcss-loader": "^4.0.1",
+    "prettier": "^2.1.1",
+    "rimraf": "^3.0.2",
+    "style-loader": "^1.2.1",
+    "stylelint": "^13.7.0",
+    "stylelint-config-css-modules": "^2.2.0",
+    "stylelint-config-standard": "^20.0.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
