--- a/package.json
+++ b/package.json
@@ -32,20 +32,15 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.2.0",
     "webpack-bundle-analyzer": "^3.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-export-default-from": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@rtivital/eslint-config": "1.0.1",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.0.0",
     "autoprefixer": "^9.8.6",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
     "chalk": "^4.1.0",
     "cname-webpack-plugin": "^2.0.1",
     "cross-env": "^7.0.2",
@@ -53,7 +48,7 @@
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.5.0",
     "eslint": "^7.8.0",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-import-resolver-webpack": "^0.12.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^24.0.0",
@@ -74,7 +69,6 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^7.0.32",
     "postcss-loader": "^4.0.1",
-    "prerender-spa-plugin": "^3.4.0",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
     "style-loader": "^1.2.1",
@@ -82,6 +76,9 @@
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-standard": "^20.0.0",
     "terser-webpack-plugin": "^4.1.0",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
