--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "react-pages-boilerplate",
   "version": "1.0.0",
   "description": "Simple boilerplate for working with React, redux, react-router and Github Pages",
+  "private": "true",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "prettier": "prettier 'src/**/**/*.?(js|jsx)' --write",
-    "start": "webpack-dev-server",
+    "start": "webpack serve",
     "build": "cross-env NODE_ENV=production webpack --progress --colors",
     "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint src --ext .js --ext .jsx"
   },
-  "browserslist": [
-    "last 2 version"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rtivital/react-pages-boilerplate.git"
@@ -25,62 +23,51 @@
   },
   "homepage": "https://github.com/rtivital/react-pages-boilerplate#readme",
   "dependencies": {
-    "classnames": "^2.2.6",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "normalize.css": "^8.0.1",
-    "open-color": "^1.7.0",
+    "classnames": "^2.3.1",
+    "open-color": "^1.8.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.0.0",
-    "autoprefixer": "^9.8.6",
-    "chalk": "^4.1.0",
-    "cname-webpack-plugin": "^2.0.1",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.3.0",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "chalk": "^4.1.2",
+    "cname-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.5.0",
-    "eslint": "^7.8.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-import-resolver-webpack": "^0.12.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.0.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "favicons-webpack-plugin": "4.2.0",
-    "file-loader": "^6.1.0",
-    "gh-pages": "^3.1.0",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-import-resolver-webpack": "^0.13.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "favicons": "^6.2.2",
+    "favicons-webpack-plugin": "5.0.2",
+    "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "git-repo-name": "^1.0.1",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^5.3.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.4.2",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.1",
-    "mini-css-extract-plugin": "^0.11.1",
+    "jest": "^27.0.6",
     "open-browser-webpack-plugin": "^0.0.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "^7.0.32",
-    "postcss-loader": "^4.0.1",
-    "prettier": "^2.1.1",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "style-loader": "^1.2.1",
-    "stylelint": "^13.7.0",
-    "stylelint-config-css-modules": "^2.2.0",
-    "stylelint-config-standard": "^20.0.0",
-    "terser-webpack-plugin": "^4.1.0",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "style-loader": "^3.2.1",
+    "terser-webpack-plugin": "^5.1.4",
+    "ts-jest": "^27.0.4",
+    "ts-loader": "^9.2.4",
+    "typescript": "^4.3.5",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
