--- a/package.json
+++ b/package.json
@@ -56,22 +56,21 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "favicons": "^6.2.2",
-    "favicons-webpack-plugin": "5.0.2",
+    "favicons-webpack-plugin": "4.2.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "git-repo-name": "^1.0.1",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^4.4.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "open-browser-webpack-plugin": "^0.0.5",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "style-loader": "^3.2.1",
-    "terser-webpack-plugin": "^5.1.4",
+    "terser-webpack-plugin": "^4.1.0",
     "ts-jest": "^27.0.4",
-    "ts-loader": "^9.2.4",
+    "ts-loader": "8.0.14",
     "typescript": "^4.3.5",
-    "webpack": "^5.48.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
